--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-on-netlify": "^2.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
