--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^14.14.9",
     "@types/react": "^17.0.0",
+    "jest": "^26.6.3",
     "typescript": "^4.1.2"
   }
 }
