--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.12.7",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.9",
     "@types/react": "^17.0.0",
+    "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "typescript": "^4.1.2"
   }
