--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command   = "yarn build"
+  command   = "yarn ci && yarn build"
   functions = "out_functions"
   publish   = "out_publish"
 
