--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# next on netlify output dirs
+# https://github.com/netlify/next-on-netlify#3-configure-netlify
+out_functions
+out_publish
