--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ci": "CI=true yarn test --coverage"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "^12.2.5",
     "next-on-netlify": "^2.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
